# PoseBridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
scripts/: engine.py
src/: main.cpp
